fix: change all admin routes

--- a/src/app/components/private/shared/admin-login/admin-login.component.html
+++ b/src/app/components/private/shared/admin-login/admin-login.component.html
@@ -36,7 +36,7 @@
                   </div>
                   <div>
                         <!-- Button -->
-                    <button type="submit" routerLink = "/dashboard"class="btn btn-primary btn-block">Se Connecter</button>
+                    <button type="submit" routerLink = "/admin/dashboard"class="btn btn-primary btn-block">Se Connecter</button>
                   </div>
                   <hr class="my-4">
                   <div class=" text-center justify-content-between d-flex icons">
