--- a/src/app/components/private/shared/categories/categories-list/categoriesList.component.html
+++ b/src/app/components/private/shared/categories/categories-list/categoriesList.component.html
@@ -44,7 +44,7 @@
                   <td class="edit">
                     <button
                       class="btn btn-warning mx-2"
-                      [routerLink]="['/modify-category', category._id]"
+                      [routerLink]="['/admin/categories/update', category._id]"
                     >
                       <i
                         class="fa fa-pencil"
