--- a/src/app/components/private/shared/blog/add-article/add-article.component.html
+++ b/src/app/components/private/shared/blog/add-article/add-article.component.html
@@ -6,10 +6,10 @@
 
     <div id="layoutSidenav_content">
       <main>
-        <div class="container-fluid px-4 ">
+        <div class="container-fluid px-4">
           <h1 class="mt-4">Articles</h1>
           <ol class="breadcrumb mb-4">
-            <li class="breadcrumb-item active">Ajouter un nouveau  article</li>
+            <li class="breadcrumb-item active">Ajouter un nouveau article</li>
           </ol>
 
           <form [formGroup]="myForm" (ngSubmit)="add()">
@@ -33,7 +33,9 @@
             <div class="input-sec">
               <div class="form-group">
                 <div>
-                  <label for="articleName " class="mt-3">Le titre d'article :</label>
+                  <label for="articleName " class="mt-3"
+                    >Le titre d'article :</label
+                  >
                 </div>
                 <input
                   type="text"
@@ -54,7 +56,9 @@
               </div>
               <div class="form-group">
                 <div>
-                  <label for="content " class="mt-3">le contenu de l'article :</label>
+                  <label for="content " class="mt-3"
+                    >le contenu de l'article :</label
+                  >
                 </div>
                 <textarea
                   type="text"
@@ -76,10 +80,10 @@
                   /></small>
                 </div>
               </div>
-              <button class="btn btn-primary mt-2" type="submit">Ajouter</button>
+              <button class="btn btn-primary mt-2" type="submit">
+                Ajouter
+              </button>
             </div>
-
-           
           </form>
         </div>
       </main>
