--- a/src/app/components/private/shared/messages/message-list/message-list.component.html
+++ b/src/app/components/private/shared/messages/message-list/message-list.component.html
@@ -42,7 +42,7 @@
 
                   <td>
 
-                    <button class="btn btn-primary mx-2" style="color: white" [routerLink]="['/message',message._id]">
+                    <button class="btn btn-primary mx-2" style="color: white" [routerLink]="['/admin/messages',message._id]">
                       <i class="fa fa-eye" aria-hidden="true"></i>
                     </button>
                     <button class="btn btn-danger mx-2" style="color: white" (click)="delete(message._id, i)">
