--- a/src/app/components/public/blog/blog.component.scss
+++ b/src/app/components/public/blog/blog.component.scss
@@ -35,13 +35,17 @@
 
 .createdAt{
     position: absolute;
-    top: 35%;
+    top: 30%;
     background-color: black;
     opacity: 65%;
+
+}
+.createdAt p{
     color: white;
     width: 150px;
     font-size: 14px;
     font-weight: bold;
+    z-index: 10;
 }
 
 .card-text{
