features:update all routes and make login admin and protected routes

--- a/src/app/components/private/admin-login/admin-login.component.html
+++ b/src/app/components/private/admin-login/admin-login.component.html
@@ -15,7 +15,7 @@
               <h1 class="mb-1 font-weight-bold">Se Connecter</h1>
             </div>
             <!-- Form -->
-            <form>
+            <form [formGroup]="myform" (ngSubmit)="login()">
               <!-- Username -->
               <div class="form-group mb-3">
                 <label for="email" class="form-label"
@@ -25,6 +25,7 @@
                   type="email"
                   id="email"
                   class="form-control"
+                  formControlName="email"
                   name="email"
                   placeholder="Adresse e-mail ici"
                   required
@@ -38,6 +39,7 @@
                   id="password"
                   class="form-control"
                   name="password"
+                  formControlName="password"
                   placeholder="**************"
                   required
                 />
@@ -64,7 +66,6 @@
                 <!-- Button -->
                 <button
                   type="submit"
-                  routerLink="/admin/dashboard"
                   class="btn btn-primary btn-block"
                 >
                   Se Connecter
