--- a/src/app/components/private/shared/top-bar/top-bar.component.scss
+++ b/src/app/components/private/shared/top-bar/top-bar.component.scss
@@ -9,3 +9,11 @@ li a {
 .bg{
     background-color: #312783;
 }
+
+.button-u{
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+    padding: 10px 10px 10px 2px ;
+    
+}
