--- a/src/app/components/private/categories/categories-list/categoriesList.component.html
+++ b/src/app/components/private/categories/categories-list/categoriesList.component.html
@@ -14,7 +14,7 @@
               class="btn btn-primary mb-3"
               data-toggle="modal"
               data-target=".bd-example-modal-sm"
-              routerLink="/add-new-category"
+              routerLink="/admin/categories/add"
             >
               + ajouter
             </button>
