--- a/src/app/components/public/courses/courses.component.html
+++ b/src/app/components/public/courses/courses.component.html
@@ -83,16 +83,16 @@
               class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4"
             >
               <a
-                href="#"
+                [routerLink]="['/courses/', training._id]"
                 class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end"
                 style="border-radius: 30px 0 0 30px"
-                >Read More</a
+                >Lire la suite</a
               >
               <a
                 href="#"
                 class="flex-shrink-0 btn btn-sm btn-primary px-3"
                 style="border-radius: 0 30px 30px 0"
-                >Join Now</a
+                >Rejoindre maintenant</a
               >
             </div>
           </div>
