--- a/src/app/components/public/forgot-password/forgot-password.component.html
+++ b/src/app/components/public/forgot-password/forgot-password.component.html
@@ -7,8 +7,8 @@
   <div class="container">
 
     <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-      <h6 class="section-title bg-white text-center text-primary px-3">Recover Your Password</h6>
-      <h1 class="mb-5">Join our community</h1>
+      <h6 class="section-title bg-white text-center text-primary px-3">Récupérer votre mot de passe</h6>
+      <h1 class="mb-5">Rejoignez notre communauté</h1>
     </div>
 
 
@@ -21,9 +21,9 @@
 
             <div class="col-6">
               <div class="form-floating">
-                <input name="email" type="email" class="form-control" id="email" placeholder="Your Email"
+                <input name="email" type="email" class="form-control" id="email" placeholder="Votre Email"
                   formControlName="email">
-                <label for="email">Your Email</label>
+                <label for="email">Email</label>
                 <div *ngIf="email?.invalid && email?.touched">
                   <small *ngIf="email?.errors?.['required']" class="text-danger">Email is required<br></small>
                   <small *ngIf="email?.errors?.['email']" class="text-danger"> invalid Email<br></small>
@@ -34,7 +34,7 @@
 
              
             <div class="col-6">
-              <button class="btn btn-primary w-100 py-3" type="submit" [disabled]="myform.invalid">Send Mail</button>
+              <button class="btn btn-primary w-100 py-3" type="submit" [disabled]="myform.invalid">Envoyer un mail</button>
             </div>
 
              
