--- a/src/app/components/public/shared/navbar/navbar.component.html
+++ b/src/app/components/public/shared/navbar/navbar.component.html
@@ -9,7 +9,7 @@
         <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a routerLink="/" routerLinkActive="active" class="nav-item nav-link">Accueil</a>
             <a routerLink="/about" routerLinkActive="active" class="nav-item nav-link">A propos</a>
-            <a routerLink="/courses" routerLinkActive="active" class="nav-item nav-link">Cours</a>
+            <a routerLink="/courses" routerLinkActive="active" class="nav-item nav-link">Formation</a>
             <a routerLink="/blog" routerLinkActive="active" class="nav-item nav-link">Blog</a>
             <a routerLink="/our-team" routerLinkActive="active" class="nav-item nav-link">Notre équipe</a>
             <a routerLink="/contact" routerLinkActive="active" class="nav-item nav-link">Contact</a>
